Fixed issue with scrollbar on desktop

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 body, html {
-  overflow: hidden;
   margin: 0;
 }
 body, html, #root, #app{
@@ -7,7 +6,10 @@ body, html, #root, #app{
   height:100%;
   background: #111;
   -webkit-overflow-scrolling:touch;
-  overflow-y: scroll;
+  overflow: hidden;
+}
+#app {
+    overflow-y:auto;
 }
 iframe {
   width:100%;
